Various updates and documentation changes identified migraing v2019.2 recipes to user-image based